# folded-falcon

./: .gitignore  CODEOWNER  CODEOWNERS  Cargo.toml  README.md  deny.toml
.githooks/: pre-push
.github/workflows/: build-and-test.yml  docs.yml  linter.yml
benches/: fold.rs  fold2.rs
crates/folded-falcon/: Cargo.toml
crates/folded-falcon/benches/: fold.rs  fold2.rs
crates/folded-falcon/examples/: usage.rs
crates/folded-falcon/src/: config.rs  falcon.rs  lfold.rs  lib.rs  subring.rs
crates/folded-falcon/src/r1cs/: builder.rs  mod.rs  ops.rs
src/: falcon.rs  folding.rs  lfold.rs  lib.rs  r1cs.rs  subring.rs
src/r1cs/: builder.rs  mod.rs  ops.rs
