[package]
name = "folded-falcon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
ark-ff = "0.4.2"
cyclotomic-rings = { git = "https://github.com/nethermindeth/latticefold", branch = "ev/r1cs-builder" }
falcon-rust = "0.1.2"
latticefold = { git = "https://github.com/nethermindeth/latticefold", branch = "ev/r1cs-builder" }
stark-rings = { git = "https://github.com/NethermindEth/stark-rings.git", branch = "main", default-features = false }
stark-rings-linalg = { git = "https://github.com/NethermindEth/stark-rings.git", branch = "main", default-features = false }
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
