[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/NethermindEth/folded-falcon"
license = "Apache-2.0"

[workspace]
members = [
    "crates/folded-falcon",
]
resolver = "2"

[workspace.dependencies]

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"


